--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "file-saver": "^2.0.5",
+    "gh-pages": "3.2.0",
     "html-webpack-plugin": "^4.5.1",
     "jquery": "^3.5.1",
     "jszip": "^3.5.0",
@@ -39,7 +40,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --display-modules --display-error-details",
-    "watch": "webpack --watch --progress"
+    "watch": "webpack --watch --progress",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d ."
   },
   "author": "Varunda",
   "license": "MIT"
